--- a/aula2/Catalago/app/src/main/AndroidManifest.xml
+++ b/aula2/Catalago/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.CatalogoDigital"
         tools:targetApi="31">
         <activity
+            android:name=".Fde_201R_Page"
+            android:exported="false" />
+        <activity
+            android:name=".fde_500_pro_Page"
+            android:exported="false" />
+        <activity
             android:name=".Fde_300w_Page"
             android:exported="false" />
         <activity
